# log2-benchmarking

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: log2_benchmark.rs
src/: lib.rs  non_zero_u63.rs
