[package]
name = "log2-benchmarking"
version = "0.1.0"
edition = "2021"
description = "Benchmarking log2 implementations"
authors = ["Brooks Prumo <brooks@prumo.org>"]
license = "GPL-3.0-only"

[dependencies]

[dev-dependencies]
proptest = "1"
criterion = "0.3"

[[bench]]
name = "log2_benchmark"
harness = false
